--- a/script/QML/qml.qrc
+++ b/script/QML/qml.qrc
@@ -1,8 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>MainWindow.qml</file>
         <file>Page1.qml</file>
         <file>Page1Form.ui.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>main.qml</file>
+        <file>ErrorPage.qml</file>
     </qresource>
 </RCC>
