--- a/script/QML/qml.qrc
+++ b/script/QML/qml.qrc
@@ -1,10 +1,12 @@
 <RCC>
     <qresource prefix="/">
-        <file>MainWindow.qml</file>
-        <file>Page1.qml</file>
-        <file>Page1Form.ui.qml</file>
+        <file>ContentComponent.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>main.qml</file>
-        <file>ErrorPage.qml</file>
+        <file>ErrorComponent.qml</file>
+        <file>HeaderComponent.qml</file>
+    </qresource>
+    <qresource prefix="/testprefix">
+        <file>TestComponent1.qml</file>
     </qresource>
 </RCC>
