change the code according to the request

--- a/script/QML/qml.qrc
+++ b/script/QML/qml.qrc
@@ -7,6 +7,6 @@
         <file>HeaderComponent.qml</file>
     </qresource>
     <qresource prefix="/testprefix">
-        <file>TestComponent1.qml</file>
+        <file>Test.qml</file>
     </qresource>
 </RCC>
