add a curtain log output in dev mode trigger by ctrl+M(show) L(clear)

--- a/script/qml/qml.qrc
+++ b/script/qml/qml.qrc
@@ -5,5 +5,6 @@
         <file>main.qml</file>
         <file>ErrorComponent.qml</file>
         <file>HeaderComponent.qml</file>
+        <file>maindev.qml</file>
     </qresource>
 </RCC>
